fixing bg issue and overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,7 @@ body {
   font-weight: 400;
   font-style: normal;
   background-color: #222222;
-  height: 100dvh;
-  width: 100dvw;
+  overflow-x: hidden;
   
 }
 
